<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/monitor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitoreo_en_tiempo_rea"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/gas_sensor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lectura_del_sensor_de_gas"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/gas_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_ppm_"
        android:textSize="22sp"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/smoke_sensor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lectura_del_sensor_de_humo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/smoke_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_ppm"
        android:textSize="22sp"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"/>

</LinearLayout>
