<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/men_principal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/btn_real_time_monitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitoreo_en_tiempo_real"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_light"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btn_reading_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial_de_lecturas"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_light"/>

</LinearLayout>
